[package]
name = "yam_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { version = "0.1.41" }
tokio = { version = "1.42.0", features = ["full"] }
rtmp-server = { path = "../servers/rtmp" }
httpflv-server = { path = "../servers/http" }
stream-center = { path = "../streamcenter" }
tracing-subscriber = "0.3.19"
tracing-tracy = "0.11.3"

[[bin]]
name = "yam_server"
path = "main.rs"
