[package]
name = "yam_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
rtmp-server = { path = "../servers/rtmp" }
http-server = { path = "../servers/http" }
rocket = { version = "0.5.1" }
stream-center = { path = "../streamcenter" }
time = { version = "0.3.37", features = ["macros"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
  "time",
  "local-time",
  "fmt",
  "std",
  "env-filter",
] }
tracing-tracy = "0.11.3"
tracing-futures = { version = "0.2.5", features = ["tokio"] }
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.7"
config = "0.15.9"
clap = { version = "4.5.31", features = ["derive"] }

[[bin]]
name = "yam_server"
path = "main.rs"
