[package]
name = "stream-center"
version = "0.1.0"
edition = "2024"

[dependencies]
amf = { path = "../formats/amf" }
flv = { path = "../formats/flv" }
utils = { path = "../utils" }
dashmap = "6.1.0"
lazy_static = "1.5.0"
serde_json = "1.0.133"
thiserror = "2.0.7"
tokio = "1.42.0"
tokio-util = "0.7.13"

tracing = "0.1.41"
[dependencies.uuid]
version = "1.11.0"
features = [
  "v7",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
