[package]
name = "stream-center"
version = "0.1.0"
edition = "2024"

[dependencies]
amf-formats = { path = "../formats/amf" }
flv-formats = { path = "../formats/flv" }
utils = { path = "../utils" }
dashmap = "6.1.0"
lazy_static = "1.5.0"
serde_json = "1.0.133"
thiserror = "2.0.7"
tokio = "1.44.2"
tokio-util = "0.7.14"
tracing = "0.1.41"
codec-common = { path = "../codec/common" }
codec-h264 = { path = "../codec/h264" }
num = "0.4.3"

[dependencies.uuid]
version = "1.11.0"
features = [
  "v7",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[lints.clippy]
uninlined_format_args = "allow"
