[package]
name = "unified-io"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.7"
tokio = { version = "1.44.2", features = ["net", "time"] }
tokio-util = { version = "0.7.14", features = ["full"] }
tracing = "0.1.41"
futures = "0.3.31"

[lints.clippy]
uninlined_format_args = "allow"
