[package]
name = "codec-aac"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../../utils" }
thiserror = { version = "2.0.7" }
byteorder = "1.5.0"
tokio-util = { version = "0.7.13", features = ["full"] }
tracing = "0.1.41"
bitstream-io = "4.0.0"
num = "0.4.3"
codec-bitstream = { path = "../bitstream" }

[lints.clippy]
uninlined_format_args = "allow"
