[package]
name = "amf-formats"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
either = "1.13.0"
thiserror = "2.0.7"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["full"] }
utils = { path = "../../utils" }

[lints.clippy]
uninlined_format_args = "allow"
