[package]
name = "flv-formats"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
thiserror = "2.0.7"
tokio-util = { version = "0.7.14", features = ["full"] }
amf-formats = { path = "../amf" }
utils = { path = "../../utils" }
num = "0.4.3"
codec-common = { path = "../../codec/common" }

[lints.clippy]
uninlined_format_args = "allow"
