[package]
name = "rtmp-formats"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { version = "2.0.7" }
amf = { path = "../amf" }
byteorder = "1.5.0"
hmac = "0.12.1"
sha2 = "0.10.8"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
utils = { path = "../../utils" }
log = "0.4.26"
