[package]
name = "rtp-formats"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { version = "2.0.7" }
byteorder = "1.5.0"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
tracing = "0.1.41"
num = "0.4.3"
utils = { path = "../../utils" }
h264_codec = { path = "../../codec/h264" }
itertools = "0.14.0"