[package]
name = "sdp-formats"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { version = "2.0.7" }
tracing = "0.1.41"
utils = { path = "../../utils" }
url = "2.5.4"
tokio-util = { version = "0.7.13", features = ["full"] }
itertools = "0.14.0"

[lints.clippy]
uninlined_format_args = "allow"
