[package]
name = "rtmp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rtmp-formats = { path = "../../formats/rtmp" }
amf = { path = "../../formats/amf" }
utils = { path = "../../utils" }
flv = { path = "../../formats/flv" }
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
stream-center = { path = "../../streamcenter" }

serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }
scope-guard = "1.2.0"
url = "2.5.4"
log = "0.4.26"
[dependencies.uuid]
version = "1.11.0"
features = [
  "v7",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
