[package]
name = "rtp-session"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.7"
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
futures = "0.3.31"
rtp-formats = { path = "../../formats/rtp" }
tracing = "0.1.41"
num = "0.4.3"
unified-io = { path = "../../unifiedio" }
utils = { path = "../../utils" }
